fix: Allow 320px wide article inline ads to extend full width
The content area has left and right margins of 15px. This allows the ads
to extend outside of the content (like photos already do). The issue is
that when ads are fixed at 320px wide, they get cut off because the
actual content area is only 290px wide.

--- a/src/components/ads/ads.scss
+++ b/src/components/ads/ads.scss
@@ -81,6 +81,14 @@
       margin: 24px auto;
     }
   }
+
+  // Target fixed-width ads
+  &[width="320"] {
+    @media (max-width: $min-320) {
+      margin-left: -#{$spacing};
+      margin-right: -#{$spacing};
+    }
+  }
 }
 
 /// ----------------------------------------------------------------------------
